kubernetes/corp/virginia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-to-cad-discord-bot
  labels:
    kittycad.io/role: server
spec:
  replicas: 1
  selector:
    matchLabels:
      kittycad.io/role: server
  template:
    metadata:
      labels:
        kittycad.io/role: server
    spec:
      containers:
        - name: server
          image: ghcr.io/kittycad/text-to-cad-discord-bot:notspecified
          ports:
            - name: api
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /ping
              port: api
          readinessProbe:
            httpGet:
              path: /ping
              port: api
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 1
              memory: 2Gi
          volumeMounts:
            - name: kittycad-secret-vol
              mountPath: /kittycad/secrets.yaml
              subPath: secrets.yaml
      volumes:
        - name: kittycad-secret-vol
          secret:
            secretName: text-to-cad-discord-bot-secrets
      imagePullSecrets:
        - name: ghcr-auth
