kubernetes/corp/virginia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    kittycad.io/role: server
spec:
  selector:
    kittycad.io/role: server
  ports:
    - name: api
      port: 8080
  type: ClusterIP
